--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: "Rebecca Combs Portfolio"
 email: 'rdc47@duke.edu'
 description: "I am a Duke CS major with interest in big data manipulation"
-baseurl: "/thing" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://rebeccacombs.github.io" # the base hostname & protocol for your site, e.g. https://example.com
 #twitter_username: 'jamigibbs'
 github_username: 'rebeccacombs'
