--- a/_config.yml
+++ b/_config.yml
@@ -15,16 +15,16 @@
 # in the templates via {{ site.myvariable }}.
 title: "Rebecca Combs Portfolio"
 email: 'rdc47@duke.edu'
-description: "I am a Duke CS major with interest in big data manipulation"
+description: "I am a Duke CS major with interest in big data manipulation."
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://rebeccacombs.github.io" # the base hostname & protocol for your site, e.g. https://example.com
+url: "https://rebeccacombs.github.io/phantom" # the base hostname & protocol for your site, e.g. https://example.com
 #twitter_username: 'jamigibbs'
 github_username: 'rebeccacombs'
 #medium_username: 'blog.jamigibbs.com'
 
 # Build settings
 markdown: kramdown
-# theme: phantom # Uncomment once published to RubyGems
+theme: phantom # Uncomment once published to RubyGems
 plugins:
   - jekyll-paginate-v2
 
