--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,11 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: "Rebecca Combs Portfolio"
+title: "Rebecca Combs"
 email: 'rdc47@duke.edu'
 description: "I am a Duke CS major with interest in big data manipulation."
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://rebeccacombs.github.io/phantom" # the base hostname & protocol for your site, e.g. https://example.com
+url: "https://rebeccacombs.github.io" # the base hostname & protocol for your site, e.g. https://example.com
 #twitter_username: 'jamigibbs'
 github_username: 'rebeccacombs'
 #medium_username: 'blog.jamigibbs.com'
